; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_varobj.c_new_root_variable.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_varobj.c_new_root_variable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.varobj = type { %struct.varobj_root* }
%struct.varobj_root = type { i32*, i64, i32, i32*, i32*, i32* }

@null_frame_id = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.varobj* ()* @new_root_variable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.varobj* @new_root_variable() #0 {
  %1 = alloca %struct.varobj*, align 8
  %2 = call %struct.varobj* (...) @new_variable()
  store %struct.varobj* %2, %struct.varobj** %1, align 8
  %3 = call i64 @xmalloc(i32 48)
  %4 = inttoptr i64 %3 to %struct.varobj_root*
  %5 = load %struct.varobj*, %struct.varobj** %1, align 8
  %6 = getelementptr inbounds %struct.varobj, %struct.varobj* %5, i32 0, i32 0
  store %struct.varobj_root* %4, %struct.varobj_root** %6, align 8
  %7 = load %struct.varobj*, %struct.varobj** %1, align 8
  %8 = getelementptr inbounds %struct.varobj, %struct.varobj* %7, i32 0, i32 0
  %9 = load %struct.varobj_root*, %struct.varobj_root** %8, align 8
  %10 = getelementptr inbounds %struct.varobj_root, %struct.varobj_root* %9, i32 0, i32 5
  store i32* null, i32** %10, align 8
  %11 = load %struct.varobj*, %struct.varobj** %1, align 8
  %12 = getelementptr inbounds %struct.varobj, %struct.varobj* %11, i32 0, i32 0
  %13 = load %struct.varobj_root*, %struct.varobj_root** %12, align 8
  %14 = getelementptr inbounds %struct.varobj_root, %struct.varobj_root* %13, i32 0, i32 4
  store i32* null, i32** %14, align 8
  %15 = load %struct.varobj*, %struct.varobj** %1, align 8
  %16 = getelementptr inbounds %struct.varobj, %struct.varobj* %15, i32 0, i32 0
  %17 = load %struct.varobj_root*, %struct.varobj_root** %16, align 8
  %18 = getelementptr inbounds %struct.varobj_root, %struct.varobj_root* %17, i32 0, i32 3
  store i32* null, i32** %18, align 8
  %19 = load i32, i32* @null_frame_id, align 4
  %20 = load %struct.varobj*, %struct.varobj** %1, align 8
  %21 = getelementptr inbounds %struct.varobj, %struct.varobj* %20, i32 0, i32 0
  %22 = load %struct.varobj_root*, %struct.varobj_root** %21, align 8
  %23 = getelementptr inbounds %struct.varobj_root, %struct.varobj_root* %22, i32 0, i32 2
  store i32 %19, i32* %23, align 8
  %24 = load %struct.varobj*, %struct.varobj** %1, align 8
  %25 = getelementptr inbounds %struct.varobj, %struct.varobj* %24, i32 0, i32 0
  %26 = load %struct.varobj_root*, %struct.varobj_root** %25, align 8
  %27 = getelementptr inbounds %struct.varobj_root, %struct.varobj_root* %26, i32 0, i32 1
  store i64 0, i64* %27, align 8
  %28 = load %struct.varobj*, %struct.varobj** %1, align 8
  %29 = getelementptr inbounds %struct.varobj, %struct.varobj* %28, i32 0, i32 0
  %30 = load %struct.varobj_root*, %struct.varobj_root** %29, align 8
  %31 = getelementptr inbounds %struct.varobj_root, %struct.varobj_root* %30, i32 0, i32 0
  store i32* null, i32** %31, align 8
  %32 = load %struct.varobj*, %struct.varobj** %1, align 8
  ret %struct.varobj* %32
}

declare dso_local %struct.varobj* @new_variable(...) #1

declare dso_local i64 @xmalloc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
